@@ -1,0 +1,77 @@
+"""ZopePageTemplate regression tests.
+
+Ensures that adding a page template works correctly.
+
+Note: Tests require Zope >= 2.7
+
+"""
+
+
+import unittest
+import Zope
+import transaction
+
+from Testing.makerequest import makerequest
+
+class ZPTRegressions(unittest.TestCase):
+
+    def setUp(self):
+        transaction.begin()
+        self.app = makerequest(Zope.app())
+        f = self.app.manage_addProduct['PageTemplates'].manage_addPageTemplate
+        self._addPT = f
+        self.title = 'title of page template'
+        self.text = 'text of page template'
+
+    def tearDown(self):
+        get_transaction().abort()
+        self.app._p_jar.close()
+
+    def testAddWithParams(self):
+        pt = self._addPT('pt1', title=self.title, text=self.text)
+        self.assertEqual(pt.title, self.title)
+        self.assertEqual(pt.document_src(), self.text)
+
+    def testAddWithoutParams(self):
+        pt = self._addPT('pt1')
+        default_text = open(pt._default_content_fn).read()
+        self.assertEqual(pt.title, '')
+        self.assertEqual(pt.document_src(), default_text)
+
+    def testAddWithRequest(self):
+        """Test manage_add with file"""
+        request = self.app.REQUEST
+        request.form['file'] = DummyFileUpload(filename='some file',
+                                               data=self.text,
+                                               content_type='text/html')
+        self._addPT('pt1', REQUEST=request)
+        # no object is returned when REQUEST is passed.
+        pt = self.app.pt1
+        self.assertEqual(pt.document_src(), self.text)
+
+    def testAddWithRequestButNoFile(self):
+        """Collector #596: manage_add with text but no file"""
+        request = self.app.REQUEST
+        self._addPT('pt1', text=self.text, REQUEST=request)
+        # no object is returned when REQUEST is passed.
+        pt = self.app.pt1
+        self.assertEqual(pt.document_src(), self.text)
+
+        
+class DummyFileUpload:
+
+    def __init__(self, data='', filename='', content_type=''):
+        self.data = data
+        self.filename = filename
+        self.headers = {'content_type': content_type}
+
+    def read(self):
+        return self.data
+
+       
+def test_suite():
+    return unittest.makeSuite(ZPTRegressions)
+
+if __name__ == '__main__':
+    unittest.main(defaultTest='test_suite')
+
